src/components/Header.css
nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: fixed;
  width: 100%;
  height: 13vh;
  z-index: 10000;
  padding-left: 2rem;
  padding-right: 2rem;
  background-color: var(--main-background-color);
  border-bottom: 1px solid var(--main-border);
}

.nav-li {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 3rem;
}

.nav-btn {
  position: relative;
  font-size: 1.3rem;
  font-weight: 700;
  background: none;
  outline: none;
  border: none;
  margin: 0;
  padding: 0.5rem 0;
  color: var(--white-text);
  transition: all 0.2s ease-in-out;

  &:hover {
    outline: none;
    color: var(--teal-color);
  }

  &:after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 2px;
    background-color: var(--teal-color);
    transform: scaleX(0);
    transform-origin: center;
    transition: transform 300ms ease-in-out;
  }
}

.nav-btn:hover::after,
.nav-btn.active-link::after {
  transform: scaleX(1);
}

.nav-btn:hover,
.nav-btn.active-link {
  color: var(--teal-color);
}

.language-selector-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  background: none;
  border: 2px solid rgb(255, 255, 255);
  color: var(--white-text);
  font-weight: 600;
  font-size: 1.5rem;
  width: 132px;
  height: 44px;
  text-align: center;
  border-radius: 32px;
  transition: all 0.25s ease-in-out;

  &:hover {
    border: 2px solid var(--teal-color);
    color: var(--teal-color);
  }
}

/* When the user is on the corresponding part of the webpage */
.active-link {
  transform: scale(1.23);
  color: var(--teal-color);
}

.navbar-title {
  font-size: 3.4rem;
  font-weight: bolder;
  background: none;
  outline: none;
  border: none;
  margin: 0;
  padding: 0 0 0 3rem;
  color: var(--white-text);

  &:hover {
    transition: all 0.2s ease-in-out;
    color: var(--teal-color);
  }

  &:active {
    transition: all 0.01s ease-in-out;
    color: rgb(0, 238, 255);
  }
}

.hamburger-button {
  display: none;
  transition: all 0.2s ease-in-out;
}

.close-icon {
  display: none;
}

/* Mobile */
@media (max-width: 768px) {
  @keyframes openMenu {
    from {
      transform: translateX(-100vw);
    }

    to {
      transform: translateX(0);
    }
  }

  @keyframes closeMenu {
    from {
      transform: translateX(0);
    }

    to {
      transform: translateX(-100vw);
    }
  }

  .hamburger-button {
    display: block;
  }

  .navbar-title {
    font-size: 2rem;
  }

  .navbar-right {
    display: flex;
    visibility: hidden;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: black;
    transform: translateX(-100vw);
    transition: visibility 0.5s;
  }

  .navbar-right.mobile-open {
    visibility: visible;
    z-index: 100001;
    animation: openMenu 0.5s ease-out forwards;
    transition: none;
  }

  .navbar-right.mobile-closed {
    visibility: hidden;
    animation: closeMenu 0.5s ease-out forwards;
    transition-delay: 0.5s;
  }

  .nav-li {
    display: flex;
    flex-direction: column;
  }

  .close-icon-div {
    position: absolute;
    top: 0.5rem;
    right: 0rem;
  }

  .close-icon {
    display: flex;
    background: none;
  }
}

